# d-delaunay

./: .codacy.yml  .codecov.yml  .coderabbit.yml  .gitignore  .markdownlint.json  .yamllint  CHANGELOG.md  COVERAGE_IMPROVEMENTS.md  Cargo.toml  LICENSE  README.md  baseline_results.txt  cspell.json  optimization_recommendations.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codacy.yml  codecov.yml  codeql.yml  rust-clippy.yml
benches/: README.md  assign_neighbors_performance.rs  baseline_results.txt  circumsphere_containment.rs  compare_results.txt  microbenchmarks.rs  small_scale_triangulation.rs  triangulation_creation.rs
docs/: code_organization.md  optimization_recommendations.md
examples/: README.md  REFACTORING_SUMMARY.md  boundary_analysis_trait.rs  check_float_traits.rs  implicit_conversion.rs  point_comparison_and_hashing.rs  run_all_examples.sh  test_alloc_api.rs  test_circumsphere.rs  test_point_generics.rs  triangulation_example.rs
scripts/: README.md  benchmark_baseline.sh  benchmark_parser.sh  compare_benchmarks.sh  extract_benchmarks.sh  extract_benchmarks.sh.bak  generate_baseline.sh  run_all_examples.sh  run_small_scale_benchmarks.sh
src/: README.md  lib.rs  test_alloc.rs
src/delaunay_core/: boundary.rs  cell.rs  facet.rs  matrix.rs  point.rs  triangulation_data_structure.rs  utilities.rs  vertex.rs
src/delaunay_core/traits/: boundary_analysis.rs  data_type.rs
src/geometry/: matrix.rs  point.rs  predicates.rs
src/geometry/traits/: coordinate.rs  finitecheck.rs  hashcoordinate.rs  orderedeq.rs
