[package]
name = "d-delaunay"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
approx = "0.5.1"
derive_builder = "0.20.1"
nalgebra = "0.33.0"
num-traits = "0.2.19"
ordered-float = { version = "5.0.0", features = ["serde"] }
peroxide = "0.39.10"
rand = "0.9.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128" 
serde_test = "1.0.177"
thiserror = "2.0.12"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[lints.rust]
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "warn"

[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = "warn"
