[package]
name = "d-delaunay"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
description = "A d-dimensional Delaunay triangulation library with generic coordinate support"
license = "BSD-3-Clause"
repository = "https://github.com/username/d-delaunay"
keywords = ["delaunay", "triangulation", "computational-geometry", "mesh", "cgal"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
approx = "0.5.1"
derive_builder = "0.20.1"
nalgebra = "0.33.0"
num-traits = "0.2.19"
ordered-float = { version = "5.0.0", features = ["serde"] }
peroxide = "0.40.0"
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.141"
serde_test = "1.0.177"
thiserror = "2.0.12"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "circumsphere_containment"
harness = false

[lints.rust]
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "warn"

[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = { level = "warn", priority = -1 }
# Allow multiple crate versions due to transitive dependencies
multiple_crate_versions = "allow"
